--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
-    "next": "latest"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
